play-pit/Monitoring/Tick-Stack/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: tick-stack
  labels:
    name: tick-stack
